--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://visualcomputing.github.io/showcase"
+baseURL = "https://AndresBonillaD.github.io/showcase"
 languageCode = "en-us"
 title = "Showcase Template"
 theme = 'book'
